# ners570f23-SpMV

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: add_spmv_test.cmake  add_spmv_test_fail.cmake  gnu_warning_flags.cmake
examples/: CMakeLists.txt  accessingValues.cpp  mwe.cpp
spmv/include/: SpMV.hpp  SparseMatrix.hpp  SparseMatrix_COO.hpp  SparseMatrix_CSR.hpp  SparseMatrix_DEN.hpp  SparseMatrix_ELL.hpp  SparseMatrix_JDS.hpp
spmv/src/: CMakeCache.txt  CMakeLists.txt  CSR_view.cpp  SparseMatrix.cpp  SparseMatrix_COO.cpp  SparseMatrix_CSR.cpp  SparseMatrix_DEN.cpp  SparseMatrix_ELL.cpp  SparseMatrix_JDS.cpp
spmv/tests/: CMakeLists.txt  COO_accessor_test.cpp  COO_assemble_test.cpp  COO_con_destruction_test.cpp  COO_construction_test.cpp  COO_matvec_test.cpp  COO_view_test.cpp  CSR_View_Test.cpp  CSR_accessor_test.cpp  CSR_assemble_test.cpp  CSR_matvec_ut.cpp  DEN_accessor_test.cpp  DEN_constructor_test.cpp  DEN_matvec_test.cpp  DEN_storage_test.cpp  ELL_accessor_test.cpp  ELL_constructors_test.cpp  ELL_matvec_ut.cpp  ELL_view_test.cpp  JDS_construction_test.cpp  example_unit_test.cpp  example_unit_test_fail.cpp  storage_test.cpp  testCOO_Constructor.cpp  unit_test_framework.hpp
